--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -48,10 +48,11 @@ $body-tertiary-bg:          $Background-S2;
 // Font
 $font-family-sans-serif: "Noto Sans TC", sans-serif;
 $headings-font-family:  "Cormorant Garamond", "Noto Sans TC", sans-serif;
-$display-font-family: "Cormorant Garamond", "Noto Sans TC", sans;
-$line-height-base: 1.2;
-$line-height-lg: 1.5;
-$line-height-sm: 1;
+$display-font-family: "Noto Sans TC", sans;
+// $line-height-base: 1.2;
+// $line-height-lg: 1.5;
+$line-height-sm: 1.2;
+$input-btn-line-height: $line-height-sm;
 
 // border radius
 $border-radius: 0;
